--- a/PetMate/src/components/CardContainer.css
+++ b/PetMate/src/components/CardContainer.css
@@ -69,7 +69,7 @@
   font-weight: bold;
   font-family: nunito;
   letter-spacing: 0.01em;
-  margin-left: 45px;
+  /* margin-left: 45px; */
 }
 
 .favorito-icon {
