--- a/PetMate/src/components/JanelaModal.css
+++ b/PetMate/src/components/JanelaModal.css
@@ -7,15 +7,27 @@
     background-color: #FFFFFF;
     border-radius: 10px;
     width: 65vw;
-    /* max-width: 600px; */
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
-    /* border: 1px solid #3d2b1e; */
     border-left: 25px solid #654833;
     justify-content: center;
     margin-top: 20px;
     padding-bottom: 40px;
+    overflow: hidden;
 }
+
+.modal_conteiner {
+    position: fixed;
+    min-height: 100vh;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    backdrop-filter: blur(2px);
+    z-index: 1000;
+    overflow-y: auto;
+}
+
 
 .titulo-barra-pet img{
     width: 350px;
@@ -70,16 +82,6 @@
     gap: 20px;
 }
 
-.modal_conteiner {
-    position: fixed;
-    min-height: 100vh;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    backdrop-filter: blur(2px);
-    z-index: 1000;
-}
 
 .cad-pet-container {
     display: flex;
