--- a/PetMate/src/pages/Cadastro.css
+++ b/PetMate/src/pages/Cadastro.css
@@ -10,6 +10,7 @@
     min-height: 100vh;
     width: 100vw;
     gap: 90px;
+    overflow-y: hidden;
     /* background-image: url('/images/fundo_patas.svg'); */
 
 }
@@ -136,16 +137,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* padding: 0px 60px 0px 85px; */
     padding-right: 0px;
-    /* border: solid */
     width: 100%; 
     height: 100%;
 
 }
 
-.inputs-column input
-{
+.inputs-column input{
     width: 350px;
     height: 45px;
     padding: 15px;
@@ -170,9 +168,6 @@
 }
 
 
-/* .inpts-dois{
-    margin-left: 50px;
-} */
 /* <<INPUTS//>> */
 
 
@@ -199,6 +194,7 @@
     flex-direction: row;
     align-items: center;
     height: 70px;
+    width: 110%;
     /* border: solid; */
 
 }
@@ -239,7 +235,6 @@
     /* CUSTOMIZAÇÃO */
 .info-cadastro {
     width: 100%;
-    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); */
 }
 
 .icon-input{
