--- a/PetMate/src/components/CadastroONG.css
+++ b/PetMate/src/components/CadastroONG.css
@@ -1,3 +1,15 @@
+
+@import url(https://fonts.googleapis.com/earlyaccess/opensanshebrew.css);
+@import url(https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css);
+
+.user-icon-container-ong{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: fit-content;
+}
+
 .conteiner-cad-ong{
     display: flex;
     flex-direction: row;
@@ -8,9 +20,13 @@
 .conteiner-info-ong{
     display: flex;
     flex-direction: column;
-    background-color: whitesmoke;
+    background-color: #F6F4F1;
     box-shadow: 0 0 10px rgba(10, 10, 10, 0.2);
-    width: 63%;
+    width: 58%;
+    height: 860px;
+    margin-left: 3%;
+    margin-top: 2%;
+    border-radius: 10px;
 
 }
 
@@ -19,8 +35,7 @@
     flex-direction: row;
     /* border: solid; */
     align-items: center;
-    margin-top: 2%;
-    margin-left: 2%;
+    margin-left: 1%;
 }
 
 .texto-cadastro-ong-img{
@@ -28,34 +43,25 @@
     flex-direction: column;
     /* border: solid; */
     align-items: center;
-    margin-left: 1%;
+    margin-left: 2%;
 }
 
 .texto-cadastro-ong-img h2{
     margin-top: 1px;
-    font-family: Koh Santepheap;
+    font-family: Open Sans Hebrew;
     font-size: 36px;
     margin-right: 30px;
-    margin-bottom: 2%;
+    color: #484848;
+    /* margin-bottom: 3%; */
 }
 
-.texto-cadastro-ong-img img{
-    height: 12px;
-    width: 98%;
+.barra-cad-ong{ 
+    height: 6px;
+    width: 39%;
+    margin-right: 61%;
+    margin-top: 2%;
 }
-.botao-voltar-cad{
-    background-color: #84644D;
-    color: #FFFFFF;
-    /* margin-bottom: 10px; */
-    font-size: 20px;
-    font-weight: bold;
-    border: none;
-    width: 40px;
-    height: 40px;
-    border-radius: 200px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
+
 
 .inputs-cad-ong{
     display: flex;
@@ -99,7 +105,7 @@ flex-direction: column;
     justify-content: center;
     align-items: center;
     font: inter;
-    margin-top: 1%;
+    margin-top: 5%;
     margin-bottom: 1%;
 }
 
@@ -118,14 +124,14 @@ flex-direction: column;
     flex-direction: column;
     justify-content: center;
     width: 340px;
-    padding: 4%;
+    padding: 2%;
     margin-top: 3%;
     /* margin-left: 4%; */
     /* height: 60px; */
     font-size: 19px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid #AD947E;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .input-cad-ong:focus
@@ -136,38 +142,7 @@ flex-direction: column;
     outline: 1px;
 }
 
-.input-descricao-cad-ong{
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    /* margin-left: 4%; */
-    width: 90%;
-    height: 120px;
-    /* padding: 9%; */
-    font-size: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
 
-.input-descricao-cad-ong:focus
-{
-    border: 1px solid #84644D;
-    background-color: #f3f3fc;
-    transition: 0.3s;
-    outline: 1px;
-}
-
-
-.descricao-ong{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: inter;
-    margin-top: 1%;
-    /* border: solid; */
-}
 
 .descricao-ong label{
     margin-bottom: 1%;
@@ -200,14 +175,14 @@ flex-direction: column;
 }
 
 .botao-cad-ong{
-    width: 25%;
+    width: 92%;
     height: 65px;
     font-weight: 600;
     font-size: 24px;
     background-color: #84644D;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     cursor: pointer;
 }
 
@@ -217,6 +192,39 @@ flex-direction: column;
     background-color: #735b4b;
 }
 
+.conteiner-botao-cad-ong p{
+    margin-top: 2%;
+}
+
 .user-icon{
     height: 80%;
+}
+
+.forms-cad-ong{
+    margin-bottom: 8%;
+    margin-right: 2%;
+}
+
+.login-cad-ong{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1%;
+    margin-bottom: 2%;
+}
+
+.login-cad-ong a{
+    font-family: inter;
+    font-size: 16px;
+    color: #84644D;
+    text-decoration: none;
+    margin-left: 3px;
+}
+
+.logoMarrom-cad-ong{
+    display: flex;
+    width: 11%;
+    margin-left: 56%;
+    /* border: solid; */
 }
