--- a/PetMate/src/index.css
+++ b/PetMate/src/index.css
@@ -30,5 +30,13 @@ body{
     font-family: Nunito;
 }
 
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+
 
 
