modallogin na página inicial

--- a/PetMate/src/components/JanelaPet.css
+++ b/PetMate/src/components/JanelaPet.css
@@ -289,11 +289,11 @@ strong {
     transition: 0.3s;
 }
 .icon_wpp:hover {
-    color: #1d8a45;
+    color: #2aad5a;
 }
 
 .iconEmail:hover {
-    color: #a6352a;
+    color: #ce483c;
 }
 
 .iconMap:hover {
