--- a/PetMate/src/pages/Feedback.css
+++ b/PetMate/src/pages/Feedback.css
@@ -125,9 +125,11 @@
 
 .inpt-feedback{
     width: 780px;
-    height: 100px;
-    border-radius: 6px;
+    height: 140px;
+    border-radius: 12px;
     border: 1px solid #654833;
+    /* border: none; */
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     padding: 10px;
     outline: none;
     font-size: 18px;
