--- a/PetMate/src/components/CadastroONG.css
+++ b/PetMate/src/components/CadastroONG.css
@@ -1,8 +1,7 @@
-
 @import url(https://fonts.googleapis.com/earlyaccess/opensanshebrew.css);
 @import url(https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css);
 
-.user-icon-container-ong{
+.user-icon-container-ong {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,27 +10,28 @@
     width: fit-content;
 }
 
-.conteiner-cad-ong{
+.conteiner-cad-ong {
     display: flex;
     flex-direction: row;
-    min-height: calc(113vh - 120px);
-    background-image: url(/images/fundo_patas.svg);
+    min-height: calc(100vh - 120px);
+    background-color: #D4C6B5;
+    /* background-image: url(/images/fundo_patas.svg); */
 }
 
-.conteiner-info-ong{
+.conteiner-info-ong {
     display: flex;
     flex-direction: column;
     background-color: #F6F4F1;
     box-shadow: 0 0 10px rgba(10, 10, 10, 0.2);
-    width: 58%;
-    height: 860px;
+    width: 65vw;
+    height: 900px;
     margin-left: 3%;
-    margin-top: 2%;
+    margin-top: 1%;
     border-radius: 10px;
-
+    padding-left: 20px;
 }
 
-.texto-cadastro-ong{
+.texto-cadastro-ong {
     display: flex;
     flex-direction: row;
     /* border: solid; */
@@ -39,7 +39,7 @@
     margin-left: 1%;
 }
 
-.texto-cadastro-ong-img{
+.texto-cadastro-ong-img {
     display: flex;
     flex-direction: column;
     /* border: solid; */
@@ -47,7 +47,7 @@
     margin-left: 2%;
 }
 
-.texto-cadastro-ong-img h2{
+.texto-cadastro-ong-img h2 {
     margin-top: 1px;
     font-family: Open Sans Hebrew;
     font-size: 36px;
@@ -56,7 +56,7 @@
     /* margin-bottom: 3%; */
 }
 
-.barra-cad-ong{ 
+.barra-cad-ong {
     height: 6px;
     width: 39%;
     margin-right: 61%;
@@ -64,7 +64,7 @@
 }
 
 
-.inputs-cad-ong{
+.inputs-cad-ong {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
@@ -72,35 +72,35 @@
     /* margin-top: 1%; */
 }
 
-.inputs-cad-ong label{
+.inputs-cad-ong label {
     margin-top: 1%;
     font-family: inter;
     font-size: 18px;
-    
+
 }
 
 
-.coluna-1-inputs{
-display: flex;
-flex-direction: column;
-/* border: solid; */
+.coluna-1-inputs {
+    display: flex;
+    flex-direction: column;
+    /* border: solid; */
 }
 
-.coluna-2-inputs{
-display: flex;
-flex-direction: column;
-/* border: solid; */
+.coluna-2-inputs {
+    display: flex;
+    flex-direction: column;
+    /* border: solid; */
 }
 
-.coluna-3-inputs{
-display: flex;
-flex-direction: column;
-/* border: solid; */
+.coluna-3-inputs {
+    display: flex;
+    flex-direction: column;
+    /* border: solid; */
 }
 
 
 
-.termos-ong{
+.termos-ong {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -110,52 +110,59 @@ flex-direction: column;
     margin-bottom: 1%;
 }
 
-.termos-ong p{
+.termos-ong p {
     font-family: inter;
 }
 
-.conteiner-botao-cad-ong{
+.conteiner-botao-cad-ong {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.input-cad-ong{
-    flex-direction: column;
-    justify-content: center;
+.input-cad-ong {
     width: 340px;
-    padding: 2%;
-    margin-top: 3%;
-    /* margin-left: 4%; */
-    /* height: 60px; */
-    font-size: 19px;
-    border: 1px solid #AD947E;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    height: 45px;
+    padding: 15px;
+    font-size: 15px;
+    border: 1px solid #84644D;
+    border-radius: 20px;
+    margin-bottom: 5px;
 }
 
-.input-cad-ong:focus
-{
+.select-estado{
+    width: 340px;
+    height: 45px;
+    padding-left: 10px;
+    font-size: 15px;
+    border: 1px solid #84644D;
+    border-radius: 20px;
+    margin-bottom: 5px;
+}
+
+.input-cad-ong:focus,
+.select-estado:focus {
+    outline: 1px;
     border: 1px solid #84644D;
     background-color: #f3f3fc;
-    transition: 0.3s;
-    outline: 1px;
+    transition: 0.23s;
 }
 
 
 
-.descricao-ong label{
+.descricao-ong label {
     margin-bottom: 1%;
 }
 
-.descricao-ong label{
+.descricao-ong label {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.ong-foto{
+
+.ong-foto {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -164,18 +171,18 @@ flex-direction: column;
 
 }
 
-.ong-foto label{
+.ong-foto label {
     display: flex;
     flex-direction: column;
     /* border: solid; */
 }
 
-.ong-foto input{
+.ong-foto input {
     justify-content: center;
     align-items: center;
 }
 
-.botao-cad-ong{
+.botao-cad-ong {
     width: 92%;
     height: 65px;
     font-weight: 600;
@@ -193,20 +200,20 @@ flex-direction: column;
     background-color: #735b4b;
 }
 
-.conteiner-botao-cad-ong p{
+.conteiner-botao-cad-ong p {
     margin-top: 2%;
 }
 
-.user-icon{
+.user-icon {
     height: 80%;
 }
 
-.forms-cad-ong{
+.forms-cad-ong {
     margin-bottom: 8%;
     margin-right: 2%;
 }
 
-.login-cad-ong{
+.login-cad-ong {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -215,7 +222,7 @@ flex-direction: column;
     margin-bottom: 2%;
 }
 
-.login-cad-ong a{
+.login-cad-ong a {
     font-family: inter;
     font-size: 16px;
     color: #84644D;
@@ -223,9 +230,31 @@ flex-direction: column;
     margin-left: 3px;
 }
 
-.logoMarrom-cad-ong{
+.logoMarrom-cad-ong {
     display: flex;
     width: 11%;
     margin-left: 56%;
-    /* border: solid; */
+}
+
+.img-lateral-ong {
+    width: 35vw;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.dog-ong {
+    justify-content: flex-end;
+    height: 100vh;
+}
+
+
+.icon-input-ong{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 5px;
+    color: #4e3727;
+}
+.icon-input-ong p{
+    margin-left: 10px;
 }
