--- a/PetMate/src/components/BarraPesquisa.css
+++ b/PetMate/src/components/BarraPesquisa.css
@@ -1,10 +1,7 @@
 .pesquisa-container {
-    /* position: absolute; */
-    /* display: inline-block; */
-    /* right: 60%; */
     display: flex;
     flex-direction: row;
-    width: 500px;
+    width: 900px;
     height: 50px;
     background-color: var(--cor-3);
     border-radius: 25px;
@@ -14,6 +11,7 @@
     padding-right: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
+    border: 1px solid #654833;
 }
 
 
@@ -35,8 +33,6 @@
     padding-left: 20px;
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.5px;
-    
-    /* padding-left: 40px; */
 }
 
 .barraDePesquisa::placeholder {
@@ -59,18 +55,3 @@
 .lupaIcon:hover{
     color: #484848
 }
-
-/* .botaoLupa{
-    background-color: #CFC0B3;
-    border: none;
-} */
-/* .iconeLupa{
-    position: absolute;
-    height: 20px;
-    left: 10px;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-    pointer-events: none;
-} */
