--- a/PetMate/src/components/JanelaModal.css
+++ b/PetMate/src/components/JanelaModal.css
@@ -24,6 +24,7 @@
     left: 0;
     right: 0;
     backdrop-filter: blur(2px);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
     overflow-y: auto;
 }
