--- a/PetMate/src/components/ModalEditarPet.css
+++ b/PetMate/src/components/ModalEditarPet.css
@@ -4,6 +4,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    backdrop-filter: blur(2px);
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
