--- a/PetMate/src/pages/Perfil.css
+++ b/PetMate/src/pages/Perfil.css
@@ -41,15 +41,16 @@
 
 .user-icon-container {
     display: flex;
-    width: fit-content;
-    height: fit-content;
+    width: 100%;
+    height: 15%;
     margin: 0 auto;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 
 .user-icon {
-    font-size: 100px;
+    font-size: 80px;
     color: #84644D;
 }
 
@@ -60,13 +61,15 @@
 .img-preview-perfil img {
     border: solid 3px #84644D;
     border-radius: 100%;
-    min-height: 100px;
-    max-height: 100px;
-    min-width: 100px;
-    max-width: 100px;
+    min-height: 80px;
+    max-height: 80px;
+    min-width: 80px;
+    max-width: 80px;
     object-fit: cover;
 }
-
+.user-icon-container.edit-mode .user-icon {
+    font-size: 70px;
+}
 .info-perfil p {
     font-size: 20px;
     margin-bottom: 8px;
@@ -80,8 +83,6 @@
     margin-bottom: 10px;
 
 }
-
-
 
 .inputs-perfil {
     display: flex;
@@ -286,6 +287,7 @@
 }
 
 .inputs-perfil input {
+    width: 440px;
     height: 55px;
 }
 
@@ -336,3 +338,9 @@
     }
   }
 
+  .trocar-foto-texto {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #84644D;
+    text-align: center;
+}
