--- a/PetMate/src/pages/Feedback.css
+++ b/PetMate/src/pages/Feedback.css
@@ -22,6 +22,11 @@
 
 .titulo-feedback{
     padding: 20px;
+    margin: 0;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .titulo-feedback h2{
@@ -53,6 +58,7 @@
 
 .comentario-container{
     min-width: 800px;
+    max-width: 800px;
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.1);
 }
 
@@ -178,13 +184,34 @@
     transition: 0.5s ease;
 }
 
-@media (max-width: 768px) {
+.comentario-texto {
+    word-break: break-word;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    font-size: 16px;
+    line-height: 1.5; 
+    height: auto;
+    min-height: 70px;
+    max-width: 100%;
+    overflow-wrap: break-word; 
+    white-space: normal; 
+}
+
+.comentario {
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 1024px) {
     .titulo-feedback h2 {
-        font-size: 20px;
+        font-size: 34px;
     }
 
     .titulo-feedback p {
-        font-size: 14px;
+        font-size: 22px;
     }
 
     .inpt-feedback {
@@ -195,6 +222,7 @@
     .botao-add-feedback {
         font-size: 14px;
         padding: 8px 16px;
+        width: 30%;
     }
 
     .comentario-texto p {
@@ -205,15 +233,31 @@
         width: 35px;
         height: 35px;
     }
+    .lista-comentarios {
+        width: 90%;
+    }
+    .comentario-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        min-width: 70%;
+        max-width: 90%;
+    }
+    .comentario-info {
+        height: auto;
+        font-size: 20px;
+        word-break: none;
+    }
+
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
     .titulo-feedback h2 {
-        font-size: 18px;
+        font-size: 28px;
     }
 
     .titulo-feedback p {
-        font-size: 12px;
+        font-size: 17px;
     }
 
     .inpt-feedback {
@@ -227,7 +271,8 @@
     }
 
     .comentario-texto p {
-        font-size: 12px;
+        font-size: 20px;
+        padding: 8px;
     }
 
     .icon-comentario {
@@ -235,3 +280,37 @@
         height: 30px;
     }
 }
+
+
+
+/* Responsividade */
+@media (max-width: 1280px) {
+    .inpt-feedback {
+        width: 100%; 
+        height: 70px; 
+        font-size: 16px; 
+    }
+    .botao-add-feedback {
+        height: 60%;
+    }
+}
+
+@media (max-width: 480px) {
+    .add-feedback {
+        margin-top: 5px;
+        margin-bottom: -10px;
+    }
+    .add-feedback-titulo p {
+        font-size: 1.2em;
+        
+    }
+    .inpt-feedback {
+        width: 100%; 
+        height: 60px; 
+        font-size: 14px; 
+    }
+    .botao-add-feedback {
+        height: 60%;
+    }
+}
+
